[tool.poetry]
name = "website"
version = "0.0.0"
description = "Combinator ML Website"
authors = ["Phil Winder <phil@WinderResearch.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "1.1.2"
mkdocs-material = "7.1.3"
mkdocs-material-extensions = "1.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
